# geolocate

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: rust.yml
geolocate-cli/: Cargo.toml
geolocate-cli/src/: filter.rs  ip.rs  main.rs  map.rs
geolocate-cli/src/command/: count.rs  list.rs  resolve.rs
geolocate-core/: Cargo.toml
geolocate-core/src/: country.rs  lib.rs
geolocate-core/src/ip/: mod.rs  v4.rs  v6.rs
geolocate-data/: Cargo.toml
geolocate-data/src/: main.rs  wiki.rs
script/: build.sh
