[package]
name = "geolocate-cli"
description = "A CLI for geolocate-core that allows for the resolution of IP addresses to their countries."
authors = ["Jaxydog"]
version = "0.1.0"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[features]
default = ["csv"]
csv = ["dep:csv"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = { version = "1.3", optional = true }
geolocate-core = { version = "*", path = "../geolocate-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
