[package]
name = "geolocate-core"
description = "The core library and API for geolocate."
authors = ["Jaxydog"]
version = "0.1.1"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
