[package]
name = "geolocate-data"
description = "A utility tool for downloading and parsing a database of countries."
authors = ["Jaxydog"]
version = "0.1.0"

edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
geolocate-core = { version = "*", path = "../geolocate-core" }
mediawiki = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
